update hash tags

--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
         <div id="mobile-menu-icon" class="visible-xs" onClick="toggle_main_menu();"><span class="glyphicon glyphicon-th"></span></div>
 
         <ul id="main-menu">
-          <li id="menu-item-text" class="menu-item scroll"><a href="#text">About Us</a></li>
-          <li id="menu-item-carousel" class="menu-item scroll"><a href="#carousel">Products</a></li>
-          <li id="menu-item-grid" class="menu-item scroll"><a href="#grid">Pricing</a></li>
-          <li id="menu-item-featured" class="menu-item scroll"><a href="#featured">Gallery</a></li>
+          <li id="menu-item-text" class="menu-item scroll"><a href="#about">About Us</a></li>
+          <li id="menu-item-carousel" class="menu-item scroll"><a href="#products">Products</a></li>
+          <li id="menu-item-grid" class="menu-item scroll"><a href="#pricing">Pricing</a></li>
+          <li id="menu-item-featured" class="menu-item scroll"><a href="#gallery">Gallery</a></li>
           <li id="menu-item-contact" class="menu-item scroll"><a href="#contact">Contact</a></li>
         </ul><!-- #main-menu -->
 
@@ -80,7 +80,7 @@
                 <section class="feature-text">
                   <h1>Giles Family Ranch</h1>
                   <p>All natural, grassfed beef and lamb.  From our farm to your plate.</p>
-                  <p><a href="#text" class="link-scroll btn btn-outline-inverse btn-lg">find out more</a></p>
+                  <p><a href="#about" class="link-scroll btn btn-outline-inverse btn-lg">find out more</a></p>
                 </section>
 
             </div><!-- .col-sm-10 -->
@@ -93,7 +93,7 @@
 
                 <h1 class="section-title">About Us</h1>
 
-                <p class="feature-paragraph"><img data-img-src="assets/images/river_sheep.jpg" class="lazy pull-right squared_border" alt="">We are a small farm in Southwest Missouri just north of the Joplin/Carthage area dedicated to raising all natural <a href="#carousel">grassfed beef and grassfed lamb</a>. By all natural, we mean that our animals are not given steroids, hormones, or antibiotics. We strive to give them a fresh, healthy, stress-free environment. We do our best to care for our land and raise all of our livestock organically. </p>
+                <p class="feature-paragraph"><img data-img-src="assets/images/river_sheep.jpg" class="lazy pull-right squared_border" alt="">We are a small farm in Southwest Missouri just north of the Joplin/Carthage area dedicated to raising all natural <a href="#products">grassfed beef and grassfed lamb</a>. By all natural, we mean that our animals are not given steroids, hormones, or antibiotics. We strive to give them a fresh, healthy, stress-free environment. We do our best to care for our land and raise all of our livestock organically. </p>
                 <h4>All Natural, Grassfed</h4>
                 <p>We believe that the most nutritious and healtful foods are those that are produced without chemicals or pesticides. For cattle and sheep, we believe that entails spending their lives grazing pastures free from commerical fertilizers, herbicides, pesticides, etc.  For more information about the benefits of eating all natural grassfed products, please visit <a href="http://www.eatwild.com" target="_blank">Eatwild.com</a>.</p>
                 <p><a href="" onclick="populate_and_open_modal(event, 'modal-content-1');" class="btn btn-outline-inverse btn-sm">read more</a></p>
