--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
           </div><!-- .content-wrapper -->
         </article><!-- .section-wrapper -->
 
-        <article id="text" class="section-wrapper clearfix" data-custom-background-img="assets/images/river.jpg">
+        <article id="about" class="section-wrapper clearfix" data-custom-background-img="assets/images/river.jpg">
           <div class="content-wrapper clearfix">
             <div class="col-sm-10 col-md-9 pull-right darken box">
 
@@ -115,7 +115,7 @@
           </div><!-- .content-wrapper -->
         </article><!-- .section-wrapper -->
 
-        <article id="carousel" class="section-wrapper clearfix" data-custom-background-img="assets/images/pasture_chicken.jpg">
+        <article id="products" class="section-wrapper clearfix" data-custom-background-img="assets/images/pasture_chicken.jpg">
           <div class="content-wrapper clearfix">
 
               <div id="features-carousel" class="carousel slide with-title-indicators max-height" data-height-percent="70" data-ride="carousel">
@@ -223,7 +223,7 @@
           </div><!-- .content-wrapper -->
         </article><!-- .section-wrapper -->
 
-        <article id="grid" class="section-wrapper clearfix" data-custom-background-img="assets/images/image003.jpg">
+        <article id="pricing" class="section-wrapper clearfix" data-custom-background-img="assets/images/image003.jpg">
           <div class="content-wrapper clearfix">
             <div class="col-sm-11 col-md-10 pull-right">
 
@@ -302,7 +302,7 @@
           </div><!-- .content-wrapper -->
         </article><!-- .section-wrapper -->
 
-        <article id="featured" class="section-wrapper clearfix" data-custom-background-img="assets/images/pond_fog_low_res.jpg">
+        <article id="gallery" class="section-wrapper clearfix" data-custom-background-img="assets/images/pond_fog_low_res.jpg">
           <div class="content-wrapper clearfix">
             <div class="col-sm-11 pull-right">
 
