update modals with close buttons on bottom

--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
                   <p><img data-img-src="assets/images/other_images/transp-image3.png" class="lazy rounded_border hover_effect pull-left" alt="">Sheep have been a wonderful addition to our ranch. The sheep graze together with the cows and mix in very well. As with our beef, our sheep and lambs do not receive anything other than pasture, hay and all natural minerals. No chemicals, no drugs, not even wormers. We're excited to be able to offer organically raised grass fed lamb.</p>
                   <p>&nbsp;</p>
                   <p>If you would like more information, please email us at <a href="mailto:gilesranch@gmail.com">gilesranch@gmail.com</a>, or phone at (417) 621-5476.</p>
+                  <div class="text-right"><button type="button" class="btn btn-outline-inverse" data-dismiss="modal" aria-hidden="true">Close</button></div>
                 </div><!-- #modal-content-1 -->
 
             </div><!-- .col-sm-10 -->
@@ -143,6 +144,7 @@
                         <p><img data-img-src="assets/images/bull_square.jpg" class="lazy rounded_border hover_effect pull-left" alt="Beef">We have several breeds of cows. We try to choose those breeds that are best suited for good grass fed beef. Most of our cows are smaller, English type breeds which tends to make them more efficient at converting grass to meat. These include Scottish Highlands,, Shorthorn, Angus, Murray Grey and British White. Our goal is not to produce the biggest cows, but produce the best meat for your table.</p>
                         <p>We use Murray Grey bulls on our cows which produces excellent grass fed beef with more marbling from only pasture. Murray Grey cattle were developed in Australia during the last century, and were first imported to the United States in 1970. Murray Greys combine the best traits of their parent breeds into a very unique, all beef breed. Murray Grey cattle have the excellent temperament, thriftiness and meat tenderness of the Shorthorns and the marbling traits of the original Scotch Aberdeen Angus. They produce an excellent grass finished beef.</p>
                         <p>For more information about the benefits of eating grassfed products, please visit <a href="http://www.eatwild.com">Eatwild.com</a>.</p>
+                        <div class="text-right"><button type="button" class="btn btn-outline-inverse" data-dismiss="modal" aria-hidden="true">Close</button></div>
                       </div><!-- #modal-content-2 -->
                     </div>
                   </div><!-- .item -->
@@ -160,6 +162,7 @@
                         <p><img data-img-src="assets/images/sheep_square.jpg" class="lazy rounded_border hover_effect pull-left" alt="Lamb">As with our other animals, our sheep and lambs spend their life on pasture freely grazing fresh forage. In the winter we supplement with hay as necessary. They also have access to the same all natural mineral supplements that our cows get. Like our beef, these are raised all naturally without any drugs or chemicals, not even wormers.</p>
                         <p>We chose Khatadin sheep for our base as they are a "hair" sheep (don't require shearing), and they are known to have a higher resistance to parasites than some other breeds. We also have some Dorpers in the mix which gives the cross a little more meat.  We run the sheep with the cows in the same paddocks at the same time. The cows help clean up after the sheep, and the sheep help clean up after the cows. They are very complimentary animals.</p>
                         <p>We'll have a limited supply of lambs available this year. Please give us a call at (417)621-5476 or email us at <a href="mailto:gilesranch@gmail.com">gilesranch@gmail.com</a> to reserve yours.</p>
+                        <div class="text-right"><button type="button" class="btn btn-outline-inverse" data-dismiss="modal" aria-hidden="true">Close</button></div>
                       </div><!-- #modal-content-3 -->
                     </div>
                   </div><!-- .item -->
@@ -177,6 +180,7 @@
                         <p>While our main focus remains producing all natural, healthy livestock for local consumers, we felt that having a local source of these supplements would be beneficial.</p>
                         <p>In addition to these supplements, we are able to supply other items from the <a href="http://www.fertrell.com/">Fertrell</a> company for both farmers and home owners.  In addition to all natural and organic supplements, the <a href="http://www.fertrell.com/">Fertrell</a> company also carries a variety of organic <a href="http://www.fertrell.com/soilcareproducts.htm">soil care products</a> for lawns, gardens, and pastures.  You can learn more about the full line of product offerings at Fetrell's website, <a href="http://www.fertrell.com/">http://www.fertrell.com</a>.</p>
                         <p>For pricing and availability, please email us at <a href="mailto:gilesranch@gmail.com">gilesranch@gmail.com</a>, or give us a call at (417)621-5476.</p>
+                        <div class="text-right"><button type="button" class="btn btn-outline-inverse" data-dismiss="modal" aria-hidden="true">Close</button></div>
                       </div><!-- #modal-content-4 -->
                     </div>
                   </div><!-- .item -->
@@ -208,6 +212,7 @@
                           <li>Effective in Clean-in-place sanitizing</li>
                         </ul>
                         <p>Note: Nixall® Disinfectant/Sanitizer has a 30 day shelf life. </p>
+                        <div class="text-right"><button type="button" class="btn btn-outline-inverse" data-dismiss="modal" aria-hidden="true">Close</button></div>
                       </div><!-- #modal-content-4 -->
                     </div>
                   </div><!-- .item -->
@@ -255,6 +260,8 @@
                     <p>There is a $100 deposit on the meat to hold your order.  If you order 1/2 or a whole beef, you can have the meat custom packaged to your specifications.  For 1/4 beef, we use a standard cut package that most people enjoy.</p>
 
                     <p>If you are interested in purchasing beef, please email us at <a href="mailto:gilesranch.com">gilesranch@gmail.com</a>, or phone at (417) 621-5476.</p>
+                        
+                    <div class="text-right"><button type="button" class="btn btn-outline-inverse" data-dismiss="modal" aria-hidden="true">Close</button></div>
 
                   </div><!-- #modal-content-5 -->
 
@@ -280,6 +287,8 @@
                     <p>There is a $100 deposit on the meat to hold your order.  You can have the meat custom packaged to your specifications.  We can work with you to suggest different types of cuts.</p>
 
                     <p>If you are interested in purchasing lamb, please email us at <a href="mailto:gilesranch.com">gilesranch@gmail.com</a>, or phone at (417) 621-5476.</p>
+                    
+                    <div class="text-right"><button type="button" class="btn btn-outline-inverse" data-dismiss="modal" aria-hidden="true">Close</button></div>
                   </div>
 
                   <!-- grid item -->
@@ -342,6 +351,8 @@
                         <div class="item"><a href="assets/images/gallery/jake.jpg" data-lightbox="popup-alt-gallery"><img class="lazyOwl" data-src="assets/images/gallery/jake_big.jpg"></a><br>The Brat</div>
                         <div class="item"><a href="assets/images/gallery/8500.jpg" data-lightbox="popup-alt-gallery"><img class="lazyOwl" data-src="assets/images/gallery/8500_big.jpg"><br>8500 Volts of Goodness!</a></div>
                       </div>
+
+                      <div class="text-right"><button type="button" class="btn btn-outline-inverse btn-sm" data-dismiss="modal" aria-hidden="true">Close</button></div>
                     </div><!-- #modal-content-8 -->
                   </article>
 
